tx_id = uploader.send_rawtx(rawtx)  ##TODO: retry or wait add tx id list of response
