# openapi_server/openapi/openapi.yaml
@@ -495,6 +495,7 @@ components:
         code: 0
         file_id: file id
         encrypt_hex: encrypt random index list to hex
+        tx_id_list: ['tx_id_0', 'tx_id_1']
       properties:
         code:
           format: int32
@@ -503,6 +504,10 @@ components:
           type: string
         encrypt_hex:
           type: string
+        tx_id_list:
+          type: array
+          items:
+            type: string
       title: response /api/uploadtocloud
       type: object
     ResponseUploadTextModel:
